# Friendex

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCH.md  CLAUDE.md  CONTRIBUTING.md  README.md  alembic.ini  mypy.ini  pyproject.toml  railway.toml  ruff.toml
.claude/: settings.json
.claude/agents/: backend-developer.md  commit-guardian.md  ecc-code-simplifier.md  knowledge-synthesizer.md  python-pro.md  sql-pro.md
.claude/hooks/: checks.sh  guard-secrets.sh
.claude/memory/: friendex-migration-roadmap.md
.claude/xan-review-modes/: README.md  architecture.md  cleanup.md  code.md  docs.md  perf.md  pre-pr.md  security.md  skip-list.md.example  test.md
.githooks/: gen_arch.py
.github/: pull_request_template.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_baseline.py  0002_fk_cascade.py  0003_system_state_monthly_rollover.py  0004_system_state_portfolio_capture.py
baton-pass/: CLAUDE.md  INDEX.md
baton-pass/issue-95-uow/: 000-2026-06-05-uow-wrap-liquidation-kickoff.md  001-2026-06-05-red-test-captured.md  002-2026-06-05-uow-fix-complete.md  003-2026-06-05-review-clean.md
baton-pass/p17-followups/: 000-2026-05-28-followups-implemented.md  001-2026-05-28-review-clean.md
baton-pass/phase-10/: 000-2026-05-26-phase-10-embeds-complete.md  001-2026-05-26-phase-10-review-clean.md
baton-pass/phase-11a/: 000-2026-05-26-phase-11a-work.md  001-2026-05-26-checkpoint-a1-a4-green.md  002-2026-05-26-phase-11a-complete.md  003-2026-05-26-phase-11a-review.md
baton-pass/phase-11b/: 001-2026-05-26-portfolio-stats-green.md  002-2026-05-26-phase-11b-review.md
baton-pass/phase-11c/: 000-2026-05-26-phase-11c-work.md  001-2026-05-26-phase-11c-complete.md  002-2026-05-26-phase-11c-review.md
baton-pass/phase-12a/: 000-2026-05-27-phase-12a-kickoff.md  001-2026-05-27-phase-12a-complete.md  002-2026-05-27-phase-12a-review.md  003-2026-05-27-phase-12a-review.md
baton-pass/phase-12b/: 000-2026-05-27-phase-12b-kickoff.md  001-2026-05-27-cf-1-cf-2-and-message-listener.md  002-2026-05-27-phase-12b-complete.md  003-2026-05-27-phase-12b-review.md
baton-pass/phase-13/: 000-2026-05-27-phase-13-start.md  002-2026-05-27-review-clean.md
baton-pass/phase-14/: 000-2026-05-27-phase-14-start.md  001-2026-05-27-phase-14-complete.md  002-2026-05-27-review-iter-1.md
baton-pass/phase-15a/: 001-2026-05-27-realistic-fixtures-ready.md  002-2026-05-27-review-clean.md
baton-pass/phase-15b/: 000-2026-05-27-migrate-flags-implemented.md
baton-pass/phase-16/: 000-2026-05-27-smoke-test-driver-implemented.md  001-2026-05-27-review-clean.md
baton-pass/phase-17a/: 000-2026-05-28-toggles-implemented.md  001-2026-05-28-review-clean.md
baton-pass/phase-17b/: 000-2026-05-28-invest-implemented.md  001-2026-05-28-review-clean.md
baton-pass/phase-17c/: 000-2026-05-28-intro-runbook-implemented.md  001-2026-05-28-review-clean.md
baton-pass/phase-3-domain/: 001-2026-05-15-phase-3-pr11-ready.md
baton-pass/phase-4-domain-funcs/: 000-2026-05-22-phase-4-kickoff.md  001-2026-05-23-price-engine-activity-done.md  002-2026-05-23-market-hours-fund-math-done.md  003-2026-05-23-phase-4-review.md
baton-pass/phase-5-orm/: 000-2026-05-23-orm-roundtrip-done.md  001-2026-05-23-alembic-baseline-done.md  002-2026-05-23-phase-5-review.md  003-2026-05-24-fk-decision-closed.md
baton-pass/phase-6-repos/: 001-2026-05-24-6a-fk-migration-complete.md  002-2026-05-24-6a-fk-migration-review.md  (+9 more)
docs/: 01-current-state.md  02-target-architecture.md  03-python-review.md  04-migration-plan.md  05-testing-strategy.md  06-per-guild-markets-migration.md  command-reference.md  deployment-guide.md  runbook-smoke-test.md
handoff/: CLAUDE.md  INDEX.md
pass-baton/: CLAUDE.md  INDEX.md
scripts/: __init__.py  gate.sh  smoke_test_commands.py
tests/: conftest.py  test_main.py  test_scaffold.py  test_typing_ci_regressions.py
(+386 files in other folders)
